# derivatives-pricing-dev

./: .gitignore  LICENSE.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  tests-readable.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
examples/: 04_asian_options.ipynb  05_greeks.ipynb  07_discount_curves.ipynb  08_barriers.ipynb
requirements/: dev.txt
src/derivatives_pricing/: __init__.py  enums.py  market_environment.py  rates.py  stochastic_processes.py  utils.py
src/derivatives_pricing/valuation/: __init__.py  asian_analytical.py  barrier_analytical.py  binomial.py  bsm.py  contracts.py  core.py  implied_volatility.py  monte_carlo.py  params.py  pde.py
tests/: conftest.py  test_asian.py  test_barrier.py  test_binomial_valuation.py  test_bsm_valuation.py  test_contracts_instantiation.py  test_control_variate.py  test_discount_curve.py  test_discrete_dividends.py  test_edge_cases.py  test_engine_caching.py  test_greeks.py  test_implied_volatility.py  test_mc_greeks.py  test_mcs_valuation.py  test_params.py  test_payoff_spec.py  test_pde.py  test_quantlib_comparison.py  test_quantlib_greeks_comparison.py  test_stochastic_processes.py  test_utils_parity_forward.py  test_valuation.py  test_valuation_purity.py
tutorials/: 01_bsm.ipynb  02_binomial_trees.ipynb  03_pde_fd.ipynb  04_monte_carlo.ipynb  05_asian_options.ipynb  LICENSE.md
